Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,12 +7,12 @@ resources:
 
 variables:
   # Container registry service connection established during pipeline creation
-  dockerRegistryServiceConnection: 'rbenavente-docker'
-  mapDockerSocket: true
-  imageRepository: 'rbenavente/evilpetclinic'
-  containerRegistry: 'https://hub.docker.com/'
-  dockerfilePath: 'Dockerfile'
-  tag: '$(Build.BuildId)'
+  #dockerRegistryServiceConnection: 'rbenavente-docker'
+  #mapDockerSocket: true
+  #imageRepository: 'rbenavente/evilpetclinic'
+  #containerRegistry: 'https://hub.docker.com/'
+  #dockerfilePath: 'Dockerfile'
+  #tag: '$(Build.BuildId)'
   
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
@@ -48,14 +48,14 @@ stages:
        scanType: 'images'
        twistlockService: 'demoBuild'
        artifact: '$(imageRepository)'
-    - task: Docker@2
-      displayName: Build and push an image to container registry
-      inputs:
-        command: buildAndPush
-        repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
-        containerRegistry: $(dockerRegistryServiceConnection)
-        tags: latest
+#    - task: Docker@2
+#      displayName: Build and push an image to container registry
+#      inputs:
+#        command: buildAndPush
+#        repository: $(imageRepository)
+#        dockerfile: $(dockerfilePath)
+#        containerRegistry: $(dockerRegistryServiceConnection)
+#        tags: latest
 
 ##    - task: Prisma Cloud IaC Scan@3
 #      inputs:
