--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,11 +38,11 @@ stages:
         effectivePomSkip: false
         sonarQubeRunAnalysis: false
 
-    - task: Docker@2
-      displayName: Login to Docker Hub
-      inputs:
-        command: login
-        containerRegistry: $(dockerRegistryServiceConnection)
+#   - task: Docker@2
+#      displayName: Login to Docker Hub
+#      inputs:
+#        command: login
+#        containerRegistry: $(dockerRegistryServiceConnection)
     - task: prisma-cloud-compute-scan@3
       inputs:
        scanType: 'images'
