--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,12 +7,12 @@ resources:
 
 variables:
   # Container registry service connection established during pipeline creation
-  #dockerRegistryServiceConnection: 'rbenavente-docker'
-  #mapDockerSocket: true
-  #imageRepository: 'rbenavente/evilpetclinic'
-  #containerRegistry: 'https://hub.docker.com/'
-  #dockerfilePath: 'Dockerfile'
-  #tag: '$(Build.BuildId)'
+  dockerRegistryServiceConnection: 'dockerHub'
+  mapDockerSocket: true
+  imageRepository: 'demiguelmoreno/evilpetclinic'
+  containerRegistry: 'https://hub.docker.com/'
+  dockerfilePath: 'Dockerfile'
+  tag: '$(Build.BuildId)'
   
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
@@ -37,32 +37,21 @@ stages:
         mavenAuthenticateFeed: false
         effectivePomSkip: false
         sonarQubeRunAnalysis: false
-
-#   - task: Docker@2
-#      displayName: Login to Docker Hub
-#      inputs:
-#        command: login
-#        containerRegistry: $(dockerRegistryServiceConnection)
+    - task: Docker@2
+      displayName: Login to Docker Hub
+      inputs:
+        command: login
+        containerRegistry: $(dockerRegistryServiceConnection)
     - task: prisma-cloud-compute-scan@3
       inputs:
        scanType: 'images'
        twistlockService: 'demoBuild'
        artifact: '$(imageRepository)'
-#    - task: Docker@2
-#      displayName: Build and push an image to container registry
-#      inputs:
-#        command: buildAndPush
-#        repository: $(imageRepository)
-#        dockerfile: $(dockerfilePath)
-#        containerRegistry: $(dockerRegistryServiceConnection)
-#        tags: latest
-
-##    - task: Prisma Cloud IaC Scan@3
-#      inputs:
-#        Path: 'deploy.yaml'
-#        prismaCloudService: 'SESanbox-PrismaCloud'
-#        High: '1'
-#        Medium: '1'
-#        Low: '1'
-#        Operator: 'or'
-#        Tags: 'env: demo'
+    - task: Docker@2
+      displayName: Build and push an image to container registry
+      inputs:
+        command: buildAndPush
+        repository: $(imageRepository)
+        dockerfile: $(dockerfilePath)
+        containerRegistry: $(dockerRegistryServiceConnection)
+        tags: latest
