--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,11 +42,11 @@ stages:
       inputs:
         command: login
         containerRegistry: $(dockerRegistryServiceConnection)
-    - task: prisma-cloud-compute-scan@3
-      inputs:
-       scanType: 'images'
-       twistlockService: 'demoBuild'
-       artifact: '$(imageRepository)'
+#    - task: prisma-cloud-compute-scan@3
+#      inputs:
+#       scanType: 'images'
+#       twistlockService: 'demoBuild'
+#       artifact: '$(imageRepository)'
     - task: Docker@2
       displayName: Build and push an image to container registry
       inputs:
