--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,19 +38,29 @@ stages:
         effectivePomSkip: false
         sonarQubeRunAnalysis: false
     - task: Docker@2
-      displayName: Login to Docker Hub
+      displayName: Build an image
       inputs:
-        command: login
+        command: build
+        repository: $(imageRepository)
+        dockerfile: $(dockerfilePath)
         containerRegistry: $(dockerRegistryServiceConnection)
+        tags: latest
     - task: prisma-cloud-compute-scan@3
       inputs:
        scanType: 'images'
        twistlockService: 'demoBuild'
        artifact: '$(imageRepository)'
+    
     - task: Docker@2
-      displayName: Build and push an image to container registry
+      displayName: Login to Docker Hub
       inputs:
-        command: buildAndPush
+        command: login
+        containerRegistry: $(dockerRegistryServiceConnection)
+    
+    - task: Docker@2
+      displayName: Push an image to container registry
+      inputs:
+        command: Push
         repository: $(imageRepository)
         dockerfile: $(dockerfilePath)
         containerRegistry: $(dockerRegistryServiceConnection)
